Fix all the issues